# julia-set-vala

./: App.vala  Julius.vala  Makefile.am  Presets.vala  README.md  configure.ac  files
src/: Presets.vala
